tests/ui/nll/closure-requirements/propagate-approximated-both-lower-bounds.stderr
note: external requirements
  --> $DIR/propagate-approximated-both-lower-bounds.rs:43:9
   |
LL |         |_outlives1, _outlives2, _outlives3, x, y| {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply::{closure#0} with closure args [
               i16,
               for<Region(BrAnon), Region(BrAnon)> extern "rust-call" fn((std::cell::Cell<&'?1 &'^0 u32>, std::cell::Cell<&'?2 &'^0 u32>, std::cell::Cell<&'^1 &'?3 u32>, std::cell::Cell<&'^0 u32>, std::cell::Cell<&'^1 u32>)),
               (),
           ]
   = note: late-bound region is '?7
   = note: late-bound region is '?8
   = note: late-bound region is '?4
   = note: late-bound region is '?5
   = note: late-bound region is '?6
   = note: number of external vids: 7
   = note: where '?2: '?3
   = note: where '?1: '?3

note: no external requirements
  --> $DIR/propagate-approximated-both-lower-bounds.rs:36:1
   |
LL | fn supply<'a, 'b, 'c>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>, cell_c: Cell<&'c u32>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply

error: lifetime may not live long enough
  --> $DIR/propagate-approximated-both-lower-bounds.rs:39:5
   |
LL |   fn supply<'a, 'b, 'c>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>, cell_c: Cell<&'c u32>) {
   |             --      -- lifetime `'c` defined here
   |             |
   |             lifetime `'a` defined here
...
LL | /     establish_relationships(
LL | |         cell_a,
LL | |         cell_b,
LL | |         cell_c,
...  |
LL | |         },
LL | |     );
   | |_____^ argument requires that `'a` must outlive `'c`
   |
   = help: consider adding the following bound: `'a: 'c`
   = note: requirement occurs because of the type `Cell<&'?10 u32>`, which makes the generic argument `&'?10 u32` invariant
   = note: the struct `Cell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
  --> $DIR/propagate-approximated-both-lower-bounds.rs:39:5
   |
LL |   fn supply<'a, 'b, 'c>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>, cell_c: Cell<&'c u32>) {
   |                 --  -- lifetime `'c` defined here
   |                 |
   |                 lifetime `'b` defined here
...
LL | /     establish_relationships(
LL | |         cell_a,
LL | |         cell_b,
LL | |         cell_c,
...  |
LL | |         },
LL | |     );
   | |_____^ argument requires that `'b` must outlive `'c`
   |
   = help: consider adding the following bound: `'b: 'c`
   = note: requirement occurs because of the type `Cell<&'?10 u32>`, which makes the generic argument `&'?10 u32` invariant
   = note: the struct `Cell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

help: the following changes may resolve your lifetime errors
   |
   = help: add bound `'a: 'c`
   = help: add bound `'b: 'c`

error: aborting due to 2 previous errors

